# rust-issue-doc-indentaion

./: Cargo.toml  README.md
doc/: search-index.js  settings.html  source-files.js
doc/rust_issue_doc_indentaion/: all.html  index.html  sidebar-items.js
doc/rust_issue_doc_indentaion/mod1/: fn.func.html  index.html
doc/rust_issue_doc_indentaion/mod2/: fn.func.html  index.html  sidebar-items.js
doc/rust_issue_doc_indentaion/mod3/: fn.func.html  index.html
doc/rust_issue_doc_indentaion/mod4/: fn.func.html  index.html
doc/src/rust_issue_doc_indentaion/: lib.rs.html  mod1.rs.html  mod2.rs.html  mod3.rs.html  mod4.rs.html
src/: lib.rs  mod1.rs  mod2.rs  mod3.rs  mod4.rs
tests/: equal-docs.rs
